Bug 79645 - Extra line spacing on the top of matrix's first row
Summary: Extra line spacing on the top of matrix's first row
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Formula Editor (show other bugs)
Version:
(earliest affected)
4.0.6.2 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-06-04 17:27 UTC by chiensyang@hotmail.com
Modified: 2016-12-13 11:40 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
The sample file contains the matrix with line spacing set at 30%. (10.94 KB, application/vnd.oasis.opendocument.text)
2014-06-04 17:27 UTC, chiensyang@hotmail.com
Details
Ignore the previous attachment; use this one (11.50 KB, application/vnd.oasis.opendocument.text)
2014-06-04 17:31 UTC, chiensyang@hotmail.com
Details

Note You need to log in before you can comment on or make changes to this bug.
Description chiensyang@hotmail.com 2014-06-04 17:27:18 UTC
Created attachment 100409 [details]
The sample file contains the matrix with line spacing set at 30%.

When I increase the line spacing between the rows in a matrix, the line spacing on top of the first line is increased also.
Comment 1 chiensyang@hotmail.com 2014-06-04 17:31:35 UTC
Created attachment 100410 [details]
Ignore the previous attachment; use this one
Comment 2 Jean-Baptiste Faure 2014-06-09 17:08:24 UTC
Already reproducible with LO 4.0.6 (generic x86-64 Linux version) under Ubuntu 14.04. I guess this behavior is inherited from old OOo time.

Best regards. JBF
Comment 3 QA Administrators 2015-07-18 17:44:07 UTC Comment hidden (obsolete)
Comment 4 Jean-Baptiste Faure 2015-07-19 11:04:43 UTC
Still reproducible with LO 5.0.1.0+ built at home under Ubuntu 15.04 x86-64.

Best regards. JBF
Comment 5 QA Administrators 2016-09-20 10:18:17 UTC Comment hidden (obsolete)
Comment 6 Jean-Baptiste Faure 2016-09-25 17:54:01 UTC
Still reproducible in LO 5.2.3.0+ and current master, both built at home under Ubuntu 16.04 x86-64.

Best regards. JBF
Comment 7 chiensyang@hotmail.com 2016-09-29 00:03:13 UTC
I still see the bug with version 5.1.5.2 under Windows 10.
Comment 8 Commit Notification 2016-11-21 05:25:40 UTC
Takeshi Abe committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=172325bedf69bbc162f3c1948264451c90c105a3

tdf#79645 Add line spacing only between rows of SmMatrixNode

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Jean-Baptiste Faure 2016-12-13 11:40:07 UTC
Verified fixed in Version: 5.3.0.0.beta2+
Build ID: 6cac8655e372bfceb011fc382fac156c8fae64d7
CPU Threads: 4; OS Version: Linux 4.4; UI Render: default; VCL: gtk3; Layout Engine: new; 
Ubuntu_16.04_x86-64
Locale: fr-FR (fr_FR.UTF-8); Calc: group

Thank you very much.
Best regards. JBF