tdf#79645 Add line spacing only between rows of SmMatrixNode

Change-Id: Icb785aff47de434fd8a99d1841dcbe4464df039f